--- a/templates/file.py.j2
+++ b/templates/file.py.j2
@@ -107,11 +107,11 @@ class {{ struct.name.upper_camel_case }}:
         instance = cls()
         {% for field in struct.fields %}
           {% if field.type_info.is_string %}
-        # Convert C string to Python string
+        {# Convert C string to Python string #}
         instance.{{ field.name.lower_snake_case }} = c_struct.{{ field.name.lower_snake_case }}.decode('utf-8')
           {% elif field.type_info.is_primitive %}
             {% if field.type_info.is_repeated %}
-        # Convert C array to Python list
+        {# Convert C array to Python list #}
         if c_struct.{{ field.name.lower_snake_case }}_size > 0:
             instance.{{ field.name.lower_snake_case }} = [c_struct.{{ field.name.lower_snake_case }}[i] for i in range(c_struct.{{ field.name.lower_snake_case }}_size)]
         else:
@@ -120,17 +120,17 @@ class {{ struct.name.upper_camel_case }}:
         instance.{{ field.name.lower_snake_case }} = c_struct.{{ field.name.lower_snake_case }}
             {% endif %}
           {% elif field.type_info.is_enum %}
-        # Convert C enum to Python enum
+        {# Convert C enum to Python enum #}
         instance.{{ field.name.lower_snake_case }} = {% if field.type_info.parent_type %}{{ field.type_info.parent_type.upper_camel_case }}.{% endif %}{{ field.type_info.name.upper_camel_case }}(c_struct.{{ field.name.lower_snake_case }})
           {% else %}
             {% if field.type_info.is_repeated %}
-        # Convert array of C structs to Python objects
+        {# Convert array of C structs to Python objects #}
         if c_struct.{{ field.name.lower_snake_case }}_size > 0:
             instance.{{ field.name.lower_snake_case }} = [{{ field.type_info.inner_name.upper_camel_case }}.from_c_struct(c_struct.{{ field.name.lower_snake_case }}[i]) for i in range(c_struct.{{ field.name.lower_snake_case }}_size)]
         else:
             instance.{{ field.name.lower_snake_case }} = []
             {% else %}
-        # Convert nested C struct to Python object
+        {# Convert nested C struct to Python object #}
         instance.{{ field.name.lower_snake_case }} = {{ field.type_info.name.upper_camel_case }}.from_c_struct(c_struct.{{ field.name.lower_snake_case }})
             {% endif %}
           {% endif %}
@@ -142,11 +142,11 @@ class {{ struct.name.upper_camel_case }}:
         c_struct = {{ struct.name.upper_camel_case }}CStruct()
         {% for field in struct.fields %}
           {% if field.type_info.is_string %}
-        # Convert Python string to C string (bytes)
+        {# Convert Python string to C string (bytes) #}
         c_struct.{{ field.name.lower_snake_case }} = self.{{ field.name.lower_snake_case }}.encode('utf-8')
           {% elif field.type_info.is_primitive %}
             {% if field.type_info.is_repeated %}
-        # Convert Python list to C array
+        {# Convert Python list to C array #}
         array_type = ctypes.{{ field.type_info.inner_name }} * len(self.{{ field.name.lower_snake_case }})
         c_struct.{{ field.name.lower_snake_case }} = array_type(*self.{{ field.name.lower_snake_case }})
         c_struct.{{ field.name.lower_snake_case }}_size = len(self.{{ field.name.lower_snake_case }})
@@ -157,7 +157,7 @@ class {{ struct.name.upper_camel_case }}:
         c_struct.{{ field.name.lower_snake_case }} = int(self.{{ field.name.lower_snake_case }})
           {% else %}
             {% if field.type_info.is_repeated %}
-        # Convert list of Python objects to C array
+        {# Convert list of Python objects to C array #}
         array_type = {{ field.type_info.inner_name.upper_camel_case }}CStruct * len(self.{{ field.name.lower_snake_case }})
         c_array = array_type()
         for i, item in enumerate(self.{{ field.name.lower_snake_case }}):
@@ -165,7 +165,7 @@ class {{ struct.name.upper_camel_case }}:
         c_struct.{{ field.name.lower_snake_case }} = ctypes.cast(c_array, ctypes.POINTER({{ field.type_info.inner_name.upper_camel_case }}CStruct))
         c_struct.{{ field.name.lower_snake_case }}_size = len(self.{{ field.name.lower_snake_case }})
             {% else %}
-        # Convert nested Python object to C struct
+        {# Convert nested Python object to C struct #}
         c_struct.{{ field.name.lower_snake_case }} = self.{{ field.name.lower_snake_case }}.to_c_struct()
             {% endif %}
           {% endif %}
